--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f9f9f9;
+    background-color: #03244f5c;
     font-family: Arial, sans-serif;
 }
 
@@ -14,9 +14,11 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .descripcion {
+    padding: 1.25rem;
     font-size: 16px;
     margin-bottom: 30px;
     text-align: center;
