--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -1,6 +1,9 @@
-/* Inicio.css */
+
 
 .inicio-container {
+    background-image: url("../../img/fondo.jpg");
+    background-size: cover ;
+    background-position: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,15 +14,17 @@
 }
 
 .titulo {
-    font-size: 24px;
+    color: #fff;
+    font-size: 54px;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
 }
 
 .descripcion {
+    color: #fff;
     padding: 1.25rem;
-    font-size: 16px;
+    font-size: 20px;
     margin-bottom: 30px;
     text-align: center;
 }
@@ -27,6 +32,7 @@
 .boton-presupuestar {
     padding: 10px 20px;
     font-size: 16px;
+    font-weight: bolder;
     border: none;
     background-color: #007bff;
     color: #fff;
