--- a/src/componentes/Insumos List/InsumosList.css
+++ b/src/componentes/Insumos List/InsumosList.css
@@ -1,50 +1,34 @@
-.container {
-    display: flex;
-    justify-content: center;
-    width: auto;
-    margin: 20px;
-}
+
 
 .category-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 80%;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 20px;
+    margin-bottom: 20px;
 }
 
 .category-title {
-    font-size: 1.5rem;
+    text-align: center;
+    font-size: 24px;
     margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.category-buttons {
     display: flex;
-    font-weight: bolder;
-    justify-content: center;
+    flex-direction: column;
+    margin: 15px;
 }
 
-.category-list {
-    list-style-type: none;
-    padding: 0;
-}
-
-.category-item {
-    background-color: rgba(31, 41, 55, 0.498);
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: center;
-    margin: 1.25rem;
-    
-    
-}
-
-.category-link {
+.category-button {
+    display: inline-block;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 5px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
     text-decoration: none;
-    color: #333;
-    transition: color 0.3s ease;
-    font-size: large;
+    border-radius: 5px;
 }
 
-.category-link:hover {
-    color: #00000083;
+.category-button:hover {
+    background-color: #0056b3;
 }
