--- a/src/componentes/Contador.css
+++ b/src/componentes/Contador.css
@@ -37,7 +37,7 @@
 .confirm-btnA {
     border: 1px solid black;
     color: black;
-    font-size: 10px;
+    font-size: 12px;
     padding: 10px 20px;
     font-weight: bolder;
     cursor: pointer;
@@ -46,9 +46,8 @@
 }
 
 .confirm-btnE {
-    background-color: #007bff;
-    color: #fff;
-    font-size: 10px;
+    background-color: rgba(128, 128, 128, 0.696);
+    font-size: 12px;
     padding: 10px 20px;
     font-weight: bolder;
     cursor: pointer;
@@ -60,7 +59,7 @@
 }
 
 .confirm-btnE:hover {
-    background-color: #0056b3;
+    background-color: rgba(128, 128, 128, 0.807);
 }
 
 .container-btn {
