--- a/src/componentes/Insumos List/InsumosList.css
+++ b/src/componentes/Insumos List/InsumosList.css
@@ -1,11 +1,14 @@
 
 
 .category-container {
+    display: flex;
     margin-bottom: 20px;
+    
 }
 
 .category-title {
     text-align: center;
+    font-style: oblique;
     font-size: 24px;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -15,6 +18,7 @@
     display: flex;
     flex-direction: column;
     margin: 15px;
+    width: 100vh;
 }
 
 .category-button {
@@ -22,9 +26,10 @@
     text-align: center;
     padding: 10px 20px;
     margin: 5px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    background-color: rgba(128, 128, 128, 0.696);
+    color: black;
     text-decoration: none;
     border-radius: 5px;
 }
@@ -32,3 +37,4 @@
 .category-button:hover {
     background-color: #0056b3;
 }
+
