--- a/src/componentes/Inicio/Inicio.css
+++ b/src/componentes/Inicio/Inicio.css
@@ -34,12 +34,13 @@
     font-size: 16px;
     font-weight: bolder;
     border: none;
-    background-color: #007bff;
+    background-color: rgb(128, 128, 128);
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    
 }
 
 .boton-presupuestar:hover {
-    background-color: #0056b3;
+    background-color: rgba(128, 128, 128, 0.649);
 }
