--- a/src/componentes/Contador.css
+++ b/src/componentes/Contador.css
@@ -31,6 +31,9 @@
 .counter-value {
     margin: 0 20px;
     font-size: 1.4rem;
+    width: 40px;
+    align-items: center;
+    border: none;
     
 }
 
