--- a/src/componentes/Footer/Footer.css
+++ b/src/componentes/Footer/Footer.css
@@ -1,9 +1,13 @@
 .footer-container {
-    width: 100%; 
-    background-color: #f0f0f0;
-    padding: 20px 0;
-    position: fixed;
-    z-index: 999;
+    position: fixed; /* Hacer que el footer sea fijo */
+    bottom: 0; /* Fijar en la parte inferior de la pantalla */
+    left: 0;
+    width: 100%;
+    background-color: #333; /* Color de fondo del footer */
+    color: #fff; /* Color del texto */
+    padding: 20px; /* Espaciado interno */
+    text-align: center; /* Alinear el contenido al centro */
+    z-index: 999; /* Asegurarse de que el footer esté por encima del contenido */
 }
 
 .footer-content {
