--- a/src/componentes/Insumos List/InsumosList.css
+++ b/src/componentes/Insumos List/InsumosList.css
@@ -10,9 +10,12 @@
     
 }
 .menu-and-detail-container{
+    margin-top: 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    overflow-y: auto;
+    height: calc(100vh - 40px)
 }
 
 .categoria-titulo{
@@ -38,16 +41,14 @@
     color: #333; 
     padding: 5px 0; 
     font-weight: bold;
-    border: 1px solid red;
     text-align: center;
 }
 
 
 .category-item:hover {
-    background-color: #ddd;
+    background-color: #ddd; /* Cambiar color de fondo al pasar el cursor */
 }
 
 .detail-container{
-    background-color: aqua;
     width: 70%;
 }
