--- a/src/componentes/Insumos List/InsumosList.css
+++ b/src/componentes/Insumos List/InsumosList.css
@@ -3,10 +3,12 @@
     width: 130px; 
     background-color: #f0f0f0; 
     padding: 20px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4); 
     height: 100vh;
     display: flex;
     flex-direction: column;
+    flex: 0 0 auto; /* No crece ni encoge, mantiene su tamaño */
+     
     
 }
 .menu-and-detail-container{
@@ -14,13 +16,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    height: calc(100vh - 40px);
     overflow-y: auto;
-    height: calc(100vh - 40px)
 }
 
 .categoria-titulo{
     font-weight: bold;
     font-style: oblique;
+    
 }
 
 
@@ -30,7 +33,7 @@
     flex-direction: column; 
     height: 85%;
     overflow-y: auto;
-    justify-content: space-around;
+    justify-content: space-around; 
     
 }
 
@@ -50,4 +53,6 @@
 
 .detail-container{
     width: 70%;
+    flex: 1;
+    overflow-y: auto;
 }
