--- a/src/componentes/Presupuesto.css
+++ b/src/componentes/Presupuesto.css
@@ -1,23 +1,30 @@
 .presupuesto-container {
     background-color: #f0f0f0;
-    padding: 20px;
+    margin-top: 75px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-bottom: solid ;
-    max-height: calc(100vh - 133px); /* Resta el alto del footer */
     overflow-y: auto; 
+    background-color: rgba(128, 128, 128, 0.644);
+    position: relative;
+    min-height: calc(100vh - 130px);
+    
 }
 
 .presupuesto-title {
     text-align: center;
     font-style: oblique;
     font-size: 24px;
+    font-weight: bold;
     margin-bottom: 20px;
+    padding: 15px 0;
     border-bottom: 1px solid gray;
     
 }
 
 .presupuesto-list {
+    padding-left: 15px;
+    padding-right: 15px;
     list-style-type: none;
 }
 
@@ -46,20 +53,31 @@
     font-size: 12px;
     font-weight: bold;
 }
+
+
 .precio{
     padding-right: 10px;
 }
 
-.total-container{
+
+.total-container {
+    position: absolute; 
+    bottom: 0; 
+    width: 100%; 
+    box-sizing: border-box; 
     border-top: 1px solid gray;
-    padding: 15px;
     display: flex;
+    margin-bottom: 15px;
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
     justify-content: space-between;
 }
 
 
 .totalP{
     font-weight: bold;
-    color: gray;
+    font-style: oblique;
+    color: white;
     font-size: 20px;
 }
